--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyBlogContext": "Data Source=localhost,1433; Initial Catalog=BlogDb; User ID=SA;Password=Password123; TrustServerCertificate=true;"
+  },
+  "MailSettings": {
+    "Mail": "thuatnguyen09112002@gmail.com",
+    "DisplayName": "Nguyen Huu Thuat",
+    "Password": "hrcbodyjgschqszf",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
